CSS/characterCSS.css
/* ... */
main {
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 0 4rem;
}

#filter-form {
  display: flex;
  justify-content: center;
  height: 36px;
  z-index: 999;
}

#filter-form input {
  width: 400px;
  margin: 0;
  border-radius: 0;
  border: var(--border-primary-light);
  color: var(--brand-color-primary);
}

#filter-form .input-button {
  height: 36px;
  margin: 0;
  border-radius: 0;
  margin-left: -1px;
  background: var(--bg-gradient-primary);
  color: white;
  transition: all 0.3s;
  border: var(--border-primary-light);
}
#filter-form .input-button:hover {
  filter: brightness(1.5);
  transition: all 0.3s;
}

#top-container {
  display: flex;
  justify-content: center;
  gap: 70px;
}

#content-container {
  display: flex;
  justify-content: flex-start;
  gap: 40px;
  width: 950px;
  margin: 70px 0;
}

#character-box-container {
  width: 900px;
  height: 651px;
}

#detail-box {
  display: flex;
  background-color: #111;
  height: 651px;
  justify-content: center;
  align-items: center;
  border: 1px solid rgba(255, 255, 255, 0.1);
}

#character-error {
  text-align: center;
  margin-top: 20px;
  color: white;
}

/* 
==============================================
# # Player Menu Tabs
==============================================
*/

#detail-buttons {
  display: none;
  justify-content: start;
  align-items: start;
  flex-direction: column;
  height: 651px;
}

#detail-buttons button {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background: var(--bg-gradient-secondary);
  color: white;
  border: none;
  width: 93px;
  height: 93px;
  transition: all 0.3s;
  cursor: pointer;
  padding: 1.25rem;
}

#detail-buttons button:hover {
  background-image: var(--bg-gradient-primary);
  color: #000;
  padding: 0.4rem;
  transition: all 0.3s;
}

#detail-buttons .current-button {
  background-image: var(--bg-gradient-primary);
  color: #000;
  font-weight: bold;
  transition: all 0.3s;
  border: 1px solid white;
}

.player-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/user-circle-dashed-fill.png);
  background-size: cover;
}
.elemental-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/dna-fill.png);
  background-size: cover;
}
.resist-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/snowflake-fill.png);
  background-size: cover;
}
.defense-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/shield-checkered-fill.png);
  background-size: cover;
}
.details-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/chart-donut-fill.png);
  background-size: cover;
}
.misc-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/infinity-fill.png);
  background-size: cover;
}
.reload-button-img {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/arrow-clockwise-fill.png);
  background-size: cover;
}

/* 
==============================================
# # Player Info Box
==============================================
*/

#player-info {
  width: 100%;
  height: 100%;
}

#player-box-content {
  padding: 1rem;
}

.character-icon {
  width: 36px;
  height: 36px;
}

.stat-icon {
  margin-right: 16px;
}

#player-table {
  color: white;
  margin-bottom: 1.2rem;
}

.player-table-title {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: var(--bg-gradient-dark);
  border: var(--border-primary-light);
  background-clip: content-box;
  height: 3rem;
  margin-bottom: 1rem;
  color: white;
  font-size: 20px;
  text-shadow: 2px 2px var(--brand-color-secondary);
}
.player-table-title div,
.player-table-title th,
.player-table-title span {
  width: 100%;
  background: none;
  text-transform: uppercase;
  text-align: center;
}

.player-table-stat {
  display: flex;
  justify-content: start;
  align-items: center;
  padding: 0 12px;
  height: 48px;
  font-size: 18px;
}

.player-table-stat:nth-child(even) {
  background: none;
}
.player-table-stat:nth-child(odd) {
  background: #1b1a18;
}

.player-table-stat td:first-of-type {
  width: 50%;
}
.player-table-stat td:last-of-type {
  color: var(--brand-color-5);
}
.stat-section-left {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
  width: 50%;
  font-size: 18px;
  color: white;
}
.stat-section-left h3 {
  font-weight: normal;
}
.stat-section-right {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
  color: var(--brand-color-5);
  font-size: 18px;
  gap: 4px;
}
#player-table td {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
}

.toggle-search {
  display: flex;
  position: absolute;
  top: 10px;
  left: 10px;
  width: 40px;
  height: 40px;
  padding: 2px;
  background-color: transparent;
  border: none;
  cursor: pointer;
  transition: all 0.3s;
  z-index: 10;
}

.toggle-search:hover {
  padding: 0px;
}

.toggle-search-image {
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/arrow-clockwise-fill.png);
  background-size: cover;
}

#char-name-section,
#search-bar-section {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 10px 0;
  height: 60px;
}
#char-name-section::before,
#search-bar-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../gallery/Displays/Banners/Abyss.webp");
  background-size: 120%;
  opacity: 0.15;
  z-index: 0;
}

.char-name {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  font-size: 2.4rem;
  opacity: 1;
  z-index: 3;
}

.char-name .char-align {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 7px 0 7px;
}
/* ... */

